@@ -11,21 +11,7 @@
   </parent>
 
   <groupId>me.paulbares</groupId>
-  <artifactId>aitm-bigquery</artifactId>
-
-  <!--  Using libraries-bom to manage versions. -->
-  <!-- See https://github.com/GoogleCloudPlatform/cloud-opensource-java/wiki/The-Google-Cloud-Platform-Libraries-BOM -->
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>com.google.cloud</groupId>
-        <artifactId>libraries-bom</artifactId>
-        <version>${bigquery.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
+  <artifactId>aitm-snowflake</artifactId>
 
   <dependencies>
     <dependency>
@@ -34,13 +20,9 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>com.google.cloud</groupId>
-      <artifactId>google-cloud-bigquery</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <scope>provided</scope>
+      <groupId>net.snowflake</groupId>
+      <artifactId>snowflake-jdbc</artifactId>
+      <version>${snowflake-jdbc.version}</version>
     </dependency>
 
     <dependency>
@@ -96,7 +78,7 @@
       </build>
     </profile>
     <profile>
-      <id>bigquery-test</id>
+      <id>snowflake-test</id>
       <build>
         <plugins>
           <plugin>
@@ -107,4 +89,16 @@
       </build>
     </profile>
   </profiles>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED</argLine>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
